--- a/src/css/style.css
+++ b/src/css/style.css
@@ -316,20 +316,19 @@ a:hover {
 }
 
 .youtube-embed-container {
-    position: relative;
-    overflow: hidden;
     width: 100%;
-    padding-top: 56.25%; /* Proporção 16:9 (altura / largura) */
+    max-width: 560px; 
+    margin: 1rem auto; 
+    
+    aspect-ratio: 16 / 9; 
+
     border-radius: 8px;
+    overflow: hidden; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .youtube-embed-container iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
+    border: 0; /* Remove a borda padrão do iframe */
 }
