--- a/src/css/style.css
+++ b/src/css/style.css
@@ -316,19 +316,19 @@ a:hover {
 }
 
 .youtube-embed-container {
-    width: 100%;
-    max-width: 560px; 
-    margin: 1rem auto; 
+  width: 100%;
+  max-width: 560px; 
+  margin: 1rem auto; 
     
-    aspect-ratio: 16 / 9; 
+  aspect-ratio: 16 / 9; 
 
-    border-radius: 8px;
-    overflow: hidden; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  overflow: hidden; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .youtube-embed-container iframe {
     width: 100%;
     height: 100%;
-    border: 0; /* Remove a borda padrão do iframe */
+    border: 0; 
 }
